# ShowerDesigner

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE-ICON  PROJECT-SUMMARY.md  README.md  SETUP_INSTRUCTIONS.md  package.xml  pyproject.toml  pyrightconfig.json
.claude/: settings.local.json
.claude/agent-memory/dev-plan-manager/: MEMORY.md  implementation-status.md
.claude/agent-memory/freecad-test-runner/: MEMORY.md
.claude/agents/: dev-plan-manager.md  fault-finder.md  freecad-test-runner.md
.github/: CONTRIBUTING.md  FUNDING.yml
Documentation/: README.md
Documentation/Dev_Plan/: ASSEMBLY-PLAN.MD  PHASE1-PLAN.md  PHASE2-PLAN.md  TASK_1.1_IMPLEMENTATION.md  TASK_1.2_IMPLEMENTATION.md  TASK_1.3_IMPLEMENTATION.md  TASK_1.4_IMPLEMENTATION.md  TASK_2.1_IMPLEMENTATION.md  TASK_2.2_IMPLEMENTATION.md  TASK_2.3_IMPLEMENTATION.md
Documentation/Usage/: Corner-Enclosure.md  FIXED_PANEL_QUICK_REFERENCE.md  GLASS_VISUAL_QUICK_REFERENCE.md
Resources/Documents/: Bevel-Hinges-Specs.md  Door, Inline and Return panel parametric.FCStd  In-Fold-Spec.md  Overview.md  Possible corner enclosure layout - Sheet1.csv  beveled-clamps-spec.md  catalogue-handles-review.md  seals-spec.md  slider-systems-review.md  sliders_catalogue_text.txt
freecad/ShowerDesigner/: INIT_GUI_SETUP.md  __init__.py  init_gui.py
freecad/ShowerDesigner/Commands/: __init__.py
freecad/ShowerDesigner/Data/: CutList.py  DimensionSpecs.py  DrawingSpecs.py  GlassSpecs.py  HardwareSpecs.py  PanelConstraints.py  SealSpecs.py  __init.py
freecad/ShowerDesigner/Gui/: CutListDialog.py  ExportDialog.py  (+1 more)
(+55 files in other folders)
